--- a/src/components/news/News.scss
+++ b/src/components/news/News.scss
@@ -26,10 +26,10 @@
       }
     }
     .newsCardOne {
-      background: url("../../assets/green.svg") center / cover no-repeat;
+      background: url("../../assets/green.webp") center / cover no-repeat;
     }
     .newsCardTwo {
-      background: url("../../assets/potato.svg") center / cover no-repeat;
+      background: url("../../assets/potato.webp") center / cover no-repeat;
     }
     .newscards {
       display: flex;
