--- a/src/components/sales/Sales.scss
+++ b/src/components/sales/Sales.scss
@@ -24,11 +24,11 @@
       }
     }
     .sale-left {
-      background: url("../../assets/natural.svg") center / cover no-repeat;
+      background: url("../../assets/natural.webp") center / cover no-repeat;
       color: $white-color;
     }
     .sale-right {
-      background: url("../../assets/offer.svg") center / cover no-repeat;
+      background: url("../../assets/offer.png") center / cover no-repeat;
       p {
         color: $secondary-color;
       }
