--- a/src/components/square/Square.scss
+++ b/src/components/square/Square.scss
@@ -12,7 +12,7 @@
     align-items: center;
     width: 480px;
     height: 450px;
-    background: url("../../assets/orange.svg") center / cover no-repeat;
+    background: url("../../assets/orange.webp") center / cover no-repeat;
     h4 {
       color: $primary-color;
       font-size: 20px;
